Admin registration in GUI works
Now time to do login